; ModuleID = '/home/carl/AnghaBench/vlc/compat/extr_inet_pton.c_inet_ntop.c'
source_filename = "/home/carl/AnghaBench/vlc/compat/extr_inet_pton.c_inet_ntop.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [20 x i8] c"%hhu.%hhu.%hhu.%hhu\00", align 1
@ENOSPC = common dso_local global i32 0, align 4
@errno = common dso_local global i32 0, align 4
@EAFNOSUPPORT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @inet_ntop(i32 %0, i8* %1, i8* %2, i32 %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i8*, align 8
  store i32 %0, i32* %6, align 4
  store i8* %1, i8** %7, align 8
  store i8* %2, i8** %8, align 8
  store i32 %3, i32* %9, align 4
  %11 = load i8*, i8** %7, align 8
  store i8* %11, i8** %10, align 8
  %12 = load i32, i32* %6, align 4
  switch i32 %12, label %35 [
    i32 128, label %13
  ]

13:                                               ; preds = %4
  %14 = load i8*, i8** %8, align 8
  %15 = load i32, i32* %9, align 4
  %16 = load i8*, i8** %10, align 8
  %17 = getelementptr inbounds i8, i8* %16, i64 0
  %18 = load i8, i8* %17, align 1
  %19 = load i8*, i8** %10, align 8
  %20 = getelementptr inbounds i8, i8* %19, i64 1
  %21 = load i8, i8* %20, align 1
  %22 = load i8*, i8** %10, align 8
  %23 = getelementptr inbounds i8, i8* %22, i64 2
  %24 = load i8, i8* %23, align 1
  %25 = load i8*, i8** %10, align 8
  %26 = getelementptr inbounds i8, i8* %25, i64 3
  %27 = load i8, i8* %26, align 1
  %28 = call i32 @snprintf(i8* %14, i32 %15, i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str, i64 0, i64 0), i8 zeroext %18, i8 zeroext %21, i8 zeroext %24, i8 zeroext %27)
  %29 = load i32, i32* %9, align 4
  %30 = icmp sge i32 %28, %29
  br i1 %30, label %31, label %33

31:                                               ; preds = %13
  %32 = load i32, i32* @ENOSPC, align 4
  store i32 %32, i32* @errno, align 4
  store i8* null, i8** %5, align 8
  br label %37

33:                                               ; preds = %13
  %34 = load i8*, i8** %8, align 8
  store i8* %34, i8** %5, align 8
  br label %37

35:                                               ; preds = %4
  %36 = load i32, i32* @EAFNOSUPPORT, align 4
  store i32 %36, i32* @errno, align 4
  store i8* null, i8** %5, align 8
  br label %37

37:                                               ; preds = %35, %33, %31
  %38 = load i8*, i8** %5, align 8
  ret i8* %38
}

declare dso_local i32 @snprintf(i8*, i32, i8*, i8 zeroext, i8 zeroext, i8 zeroext, i8 zeroext) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
